bluejay-typegen/tests/validation_cases/error/invalid_query_fragment_and_field_selections.rs
#[bluejay_typegen::typegen([
    type Query {
        foo: String
    }
])]
mod schema {
    #[query([
        {
            foo
            ...MyFragment
        }

        fragment MyFragment on Query {
            foo
        }
    ])]
    mod query {}
}

fn main() {}
